--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,10 @@ p.center {
 
 a { color: #eee; }
 
+#big-video-wrap {
+  position:relative !important;
+}
+
 .site-container {
     display:block;
     position:absolute;
@@ -208,6 +212,7 @@ a { color: #eee; }
     margin-top:2px;
     margin-bottom:10px;
     font-size:24px;
+    overflow-y:scroll;
 }
 
 .modal-body p {
