Changed font styles.

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,13 @@ root {
 }
 
 p,ul,li,ol,td,div,span {
-    font-family: 'Helvetica', sans-serif;
+    font-family: font-family: Georgia,Times,Times New Roman,serif;
     font-weight:300;
     color:#d6d6d6;
 }
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: 'Helvetica', sans-serif;
+    font-family: font-family: Georgia,Times,Times New Roman,serif;
     font-weight:300;
     color:#eee;
 }
@@ -53,7 +53,7 @@ img.shatter-logo {
 }
 
 p {
-    font-size:13px;
+    font-size:12px;
 }
 
 p.margin {
